--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
                     <li><a class="dropdown-item" href="{% url 'admin_add_sale' %}">Add Sale</a></li>
                     <li><a class="dropdown-item" href="{% url 'manage_incentive_rules' %}">Incentive Rules</a></li>
                     <li><a class="dropdown-item" href="{% url 'recalc_points' %}">Recalculate Points</a></li>
+                    <li><a class="dropdown-item" href="{% url 'client_analysis' %}">Client Analysis</a></li>
                   </ul>
                 </li>
 
@@ -104,6 +105,7 @@
                   <ul class="dropdown-menu" aria-labelledby="empSalesDropdown">
                     <li><a class="dropdown-item" href="{% url 'add_sale' %}">Add Sale</a></li>
                     <li><a class="dropdown-item" href="{% url 'recalc_points' %}">Recalculate Points</a></li>
+                    <li><a class="dropdown-item" href="{% url 'client_analysis' %}">Client Analysis</a></li>
                   </ul>
                 </li>
               {% endif %}
