--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     <!-- Navbar with dropdowns -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">CRM Dashboard</a>
+        <a class="navbar-brand" href="#">KI BackOffice</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -94,6 +94,7 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="empClientsDropdown">
                     <li><a class="dropdown-item" href="{% url 'my_clients' %}">My Clients</a></li>
+                    <li><a class="dropdown-item" href="{% url 'add_client' %}">Add Client</a></li>
                   </ul>
                 </li>
 
