Work done on all sales added to employees

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,6 +107,7 @@
                     <li><a class="dropdown-item" href="{% url 'add_sale' %}">Add Sale</a></li>
                     <li><a class="dropdown-item" href="{% url 'recalc_points' %}">Recalculate Points</a></li>
                     <li><a class="dropdown-item" href="{% url 'client_analysis' %}">Client Analysis</a></li>
+                    <li><a class="dropdown-item" href="{% url 'all_sales' %}">All Sales</a></li>
                   </ul>
                 </li>
               {% endif %}
