--- a/templates/clients/add_client.html
+++ b/templates/clients/add_client.html
@@ -92,7 +92,7 @@
       </div>
 
       <div class="mt-4 d-flex justify-content-between">
-        <a href="{% url 'all_clients' %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url 'clients:all_clients' %}" class="btn btn-secondary">Cancel</a>
         <button type="submit" class="btn btn-success">Save Client</button>
       </div>
     </form>
