--- a/templates/clients/map_client.html
+++ b/templates/clients/map_client.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="d-flex justify-content-between">
-        <a href="{% url 'all_clients' %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url 'clients:all_clients' %}" class="btn btn-secondary">Cancel</a>
         <button type="submit" class="btn btn-success">Save Mapping</button>
       </div>
     </form>
