--- a/templates/sales/edit_sale.html
+++ b/templates/sales/edit_sale.html
@@ -10,7 +10,7 @@
     {{ form.as_p }}
 
     <button type="submit" class="btn btn-success">Save Changes</button>
-    <a href="{% url 'all_sales' %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'clients:all_sales' %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 {% endblock %}
