--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
               {% if request.user.employee.role == "admin" %}
                 <!-- Admin -->
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'admin_dashboard' %}">Dashboard</a>
+                  <a class="nav-link" href="{% url 'clients:admin_dashboard' %}">Dashboard</a>
                 </li>
 
                 <!-- Clients Dropdown -->
@@ -62,8 +62,8 @@
                     Clients
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="clientsDropdown">
-                    <li><a class="dropdown-item" href="{% url 'all_clients' %}">All Clients</a></li>
-                    <li><a class="dropdown-item" href="{% url 'add_client' %}">Add Client</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:all_clients' %}">All Clients</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:add_client' %}">Add Client</a></li>
                   </ul>
                 </li>
 
@@ -73,19 +73,29 @@
                     Sales
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="salesDropdown">
-                    <li><a class="dropdown-item" href="{% url 'all_sales' %}">All Sales</a></li>
-                    <li><a class="dropdown-item" href="{% url 'admin_add_sale' %}">Add Sale</a></li>
-                    <li><a class="dropdown-item" href="{% url 'manage_incentive_rules' %}">Incentive Rules</a></li>
-                    <li><a class="dropdown-item" href="{% url 'recalc_points' %}">Recalculate Points</a></li>
-                    <li><a class="dropdown-item" href="{% url 'client_analysis' %}">Client Analysis</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:all_sales' %}">All Sales</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:admin_add_sale' %}">Add Sale</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:manage_incentive_rules' %}">Incentive Rules</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:recalc_points' %}">Recalculate Points</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:client_analysis' %}">Client Analysis</a></li>
+                  </ul>
+                </li>
+
+                <!-- 🔹 Calling Dropdown (Admin) -->
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="callingDropdown" role="button" data-bs-toggle="dropdown">
+                    Calling
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="callingDropdown">
+                    <li><a class="dropdown-item" href="{% url 'clients:upload_list' %}">Upload Calling List</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:admin_lists' %}">Manage Calling Lists</a></li>
                   </ul>
                 </li>
 
               {% elif request.user.employee.role == "employee" %}
                 <!-- Employee -->
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'employee_dashboard' %}">Dashboard</a>
-                  
+                  <a class="nav-link" href="{% url 'clients:employee_dashboard' %}">Dashboard</a>
                 </li>
 
                 <!-- Clients Dropdown -->
@@ -94,8 +104,8 @@
                     Clients
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="empClientsDropdown">
-                    <li><a class="dropdown-item" href="{% url 'my_clients' %}">My Clients</a></li>
-                    <li><a class="dropdown-item" href="{% url 'add_client' %}">Add Client</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:my_clients' %}">My Clients</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:add_client' %}">Add Client</a></li>
                   </ul>
                 </li>
 
@@ -105,10 +115,21 @@
                     Sales
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="empSalesDropdown">
-                    <li><a class="dropdown-item" href="{% url 'add_sale' %}">Add Sale</a></li>
-                    <li><a class="dropdown-item" href="{% url 'recalc_points' %}">Recalculate Points</a></li>
-                    <li><a class="dropdown-item" href="{% url 'client_analysis' %}">Client Analysis</a></li>
-                    <li><a class="dropdown-item" href="{% url 'all_sales' %}">All Sales</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:add_sale' %}">Add Sale</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:recalc_points' %}">Recalculate Points</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:client_analysis' %}">Client Analysis</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:all_sales' %}">All Sales</a></li>
+                  </ul>
+                </li>
+
+                <!-- 🔹 Calling Dropdown (Employee) -->
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="empCallingDropdown" role="button" data-bs-toggle="dropdown">
+                    Calling
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="empCallingDropdown">
+                    <li><a class="dropdown-item" href="{% url 'clients:employee_lists' %}">My Calling Lists</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:employee_calendar' %}">My Calendar</a></li>
                   </ul>
                 </li>
               {% endif %}
@@ -117,7 +138,7 @@
 
           <!-- Right side -->
           <span class="navbar-text text-white me-3">Hi, {{ request.user.username }}</span>
-          <a href="{% url 'logout' %}" class="btn btn-light btn-sm">Logout</a>
+          <a href="{% url 'clients:logout' %}" class="btn btn-light btn-sm">Logout</a>
         </div>
       </div>
     </nav>
@@ -130,7 +151,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Select2 JS -->
     <script src="{% static 'django_select2/django_select2.js' %}"></script>
-  <script src="https://unpkg.com/htmx.org@1.9.10"></script>
-
+    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
   </body>
 </html>
