--- a/templates/clients/all_clients.html
+++ b/templates/clients/all_clients.html
@@ -53,7 +53,7 @@
 
     <div class="col-md-12 mt-2">
       <button type="submit" class="btn btn-primary">Filter</button>
-      <a href="{% url 'all_clients' %}" class="btn btn-secondary">Reset</a>
+      <a href="{% url 'clients:all_clients' %}" class="btn btn-secondary">Reset</a>
     </div>
   </form>
 </div>
@@ -88,7 +88,7 @@
         <td>₹{{ client.health_cover|default:0 }}</td>
         <td>{% if client.mapped_to %}{{ client.mapped_to.user.username }}{% else %}-{% endif %}</td>
         <td>
-          <a href="{% url 'map_client' client.id %}" class="btn btn-sm btn-primary">Map</a>
+          <a href="{% url 'clients:map_client' client.id %}" class="btn btn-sm btn-primary">Map</a>
         </td>
       </tr>
       {% empty %}
