--- a/templates/clients/client_analysis.html
+++ b/templates/clients/client_analysis.html
@@ -44,7 +44,7 @@
 
     <div class="col-md-12 mt-2">
       <button type="submit" class="btn btn-primary">Filter</button>
-      <a href="{% url 'client_analysis' %}" class="btn btn-secondary">Reset</a>
+      <a href="{% url 'clients:client_analysis' %}" class="btn btn-secondary">Reset</a>
       <button type="submit" name="export" value="1" class="btn btn-success">Export CSV</button>
     </div>
   </form>
