--- a/templates/clients/my_clients.html
+++ b/templates/clients/my_clients.html
@@ -53,7 +53,7 @@
 
     <div class="col-md-12 mt-2">
       <button type="submit" class="btn btn-primary">Filter</button>
-      <a href="{% url 'all_clients' %}" class="btn btn-secondary">Reset</a>
+      <a href="{% url 'clients:all_clients' %}" class="btn btn-secondary">Reset</a>
     </div>
   </form>
 </div>
