--- a/templates/sales/add_sale.html
+++ b/templates/sales/add_sale.html
@@ -47,7 +47,7 @@
     </div>
 
     <button type="submit" class="btn btn-success">Save Sale</button>
-    <a href="{% url 'employee_dashboard' %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'clients:employee_dashboard' %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 
