--- a/templates/sales/admin_add_sale.html
+++ b/templates/sales/admin_add_sale.html
@@ -46,7 +46,7 @@
     </div>
 
     <button type="submit" class="btn btn-success">Save Sale</button>
-    <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'clients:admin_dashboard' %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 
