--- a/templates/sales/delete_sale.html
+++ b/templates/sales/delete_sale.html
@@ -13,7 +13,7 @@
   <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Yes, Delete</button>
-    <a href="{% url 'all_sales' %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'clients:all_sales' %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 {% endblock %}
