--- a/templates/sales/edit_sale_modal.html
+++ b/templates/sales/edit_sale_modal.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'edit_sale' sale.id %}">
+<form method="post" action="{% url 'clients:edit_sale' sale.id %}">
   {% csrf_token %}
   <div class="modal-header">
     <h5 class="modal-title">Edit Sale #{{ sale.id }}</h5>
